have changed the name of the button with controller variable title

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <!--The content below is only a placeholder and can be replaced.-->
-<button type="button" class="btn btn-primary">Primary</button>
+<button type="button" class="btn btn-primary">{{title}}</button>
