--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <button type="button" class="btn btn-primary">{{title}}</button>
-<div>Gaurav was not here</div>
+<div>SomeBody was here</div>
 
